# app/models/adopter.rb
@@ -12,5 +12,6 @@
 #  updated_at :datetime         not null
 #
 class Adopter < ApplicationRecord
+  has_many :adoption, dependent: :destroy
 
 end
