# app/serializers/adoption_serializer.rb
@@ -1,0 +1,9 @@
+class AdoptionSerializer < ActiveModel::Serializer
+  attributes :id,
+             :date,
+             :created_at,
+             :updated_at
+
+  belongs_to :pet, serializer: PetSerializer
+  belongs_to :adopter, serializer: AdopterSerializer
+end
